# o3de-fedora

PhysX/: PhysX.spec
amazon-gamelift-server-sdk/: amazon-gamelift-server-sdk-incthread.patch  amazon-gamelift-server-sdk.spec
aws-c-cal/: aws-c-cal.spec
aws-c-common/: aws-c-common.spec
aws-c-event-stream/: aws-c-event-stream.spec
aws-c-io/: aws-c-io.spec
aws-checksums/: aws-checksums.spec
civetweb/: civetweb.spec
etc2comp/: etc2comp.spec
mikktspace/: CMakeLists.txt  mikktspace.spec
qt5-windeployqt/: qt5-windeployqt.spec
s2n-tls/: s2n-tls.spec
